# pyperscan

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  Cargo.toml  Containerfile.aarch64-unknown-linux-gnu  Containerfile.aarch64-unknown-linux-musl  Containerfile.x86_64-unknown-linux-gnu  Containerfile.x86_64-unknown-linux-musl  README.md  codecov.yml  flake.nix  hooks.py  index.html  justfile  mkdocs.yml  objects.inv  pyperscan.nix  pyperscan.pyi  pyproject.toml  renovate.json  sitemap.xml  tests.nix
.github/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-gnu
.github/workflows/: ci.yml  docs.yml
LICENSE-APACHE/: index.html
LICENSE-MIT/: index.html
api/: index.html
changelog/: index.html
changelog.d/: 16.added.md  17.changed.md  19.changed.md  30.fixed  39.changed.md  43.changed.md
docs/: LICENSE-APACHE.md  LICENSE-MIT.md  api.md  changelog.md  hooks.py  usage.md
extension-module/: Cargo.toml
hyperscan-sys/: Cargo.toml  build.rs
nix/: pyperscan.nix
python/pyperscan/: __init__.py  _pyperscan.pyi
src/: lib.rs
src/hyperscan/: error.rs  mod.rs  native.rs  wrapper.rs
src/python/: extension.rs  mod.rs  wrapper.rs
tests/: test_examples.py  test_python.py
tests/examples/: block.py
usage/: index.html
