[package]
name = "pyperscan"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "pyperscan"
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.6.0"
foreign-types = "0.5.0"
pyo3 = { version = "0.22.2", features = ["extension-module", "abi3-py38"] }
thiserror = "1.0.37"
hyperscan-sys = { path = "./hyperscan-sys" }
libc = "0.2.142"

[features]
hyperscan = ["hyperscan-sys/hyperscan"]
vectorscan = ["hyperscan-sys/vectorscan"]

[workspace]
resolver = "2"
members = [".", "hyperscan-sys"]

[workspace.package]
version = "0.3.0"
authors = ["László Vaskó <1771332+vlaci@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.64"
description = "An opinionated Python binding for Hyperscan focusing on easy of use and safety."
repository = "https://github.com/vlaci/pyperscan"
homepage = "https://github.com/vlaci/pyperscan"
readme = "README.md"
