[package]
name = "pyperscan"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "pyperscan"
crate-type = ["cdylib"]

[dependencies]
bitflags = "1.3.2"
foreign-types = "0.5.0"
pyo3 = { version = "0.17", features = ["extension-module", "abi3-py38"] }
thiserror = "1.0.37"

hyperscan-sys.workspace = true

[features]
hyperscan = ["hyperscan-sys/hyperscan"]
vectorscan = ["hyperscan-sys/vectorscan"]
