[package]
name = "hyperscan-sys"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[features]
hyperscan = ["cmake"]
vectorscan = ["cmake"]

[build-dependencies]
bindgen = "0.69.0"
cmake = { version = "0.1", optional = true }
